--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "dependencies": {
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "7.4.4",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/haptics": "7.0.2",
+    "@capacitor/ios": "7.4.4",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
